# spec-harvester

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  components.json  pyproject.toml
.claude/: settings.json
.claude/skills/add-design-system/: SKILL.md
.claude/skills/manage-ds-crawl/: SKILL.md
.github/workflows/: cleanup-merged-branches.yml
docs/: DDD_ARCHITECTURE.md  architecture.md  domain-concepts.md  output-format.md  overview.md  policies.md
scripts/: verify_crawl.py
spec_harvester_crawler/: README.md  pyproject.toml
spec_harvester_crawler/src/spec_crawler/: __init__.py  __main__.py
spec_harvester_crawler/src/spec_crawler/config/policies/: w3c.json
spec_harvester_crawler/src/spec_crawler/core/: url_normalize.py
spec_harvester_crawler/src/spec_crawler/fetch/: rate_limit.py  robots.py
spec_harvester_crawler/src/spec_crawler/types/: meta.py
src/spec_crawler/: __init__.py  cli.py
src/spec_crawler/application/: __init__.py  queue.py
src/spec_crawler/config/: __init__.py  policy.py
src/spec_crawler/core/: __init__.py  hashing.py
src/spec_crawler/domain/: __init__.py  hashing.py  url.py
src/spec_crawler/extract/: links.py
src/spec_crawler/interfaces/: cli.py
src/spec_crawler/storage/: manifest.py  writer.py
src/spec_harvester/: __main__.py  cli.py
tests/: test_audit_cli.py  test_change_detection.py  test_crawl_orchestrator.py  test_http_client.py  test_jsonl_logging.py  test_link_extractor.py  test_policy_loader.py  test_publish_bundle.py  test_robots_checker.py  test_storage_writer.py  test_url_normalize.py
(+40 files in other folders)
