[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-harvester-crawler"
version = "0.1.0"
description = "Crawler skeleton for spec harvesting"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Spec Harvester" }]
dependencies = [
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "markdownify>=0.13.0",
  "pytest>=8.0.0"
]

[project.scripts]
spec-crawler = "spec_harvester.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
